--- a/src/App.scss
+++ b/src/App.scss
@@ -15,3 +15,14 @@ html {
         font-size: 35px;
     }
 }
+
+body {
+    display: block;
+    width: 100vw;
+    height: 100vh;
+    overflow: hidden;
+}
+
+* {
+    box-sizing: border-box;
+}
