--- a/src/App.scss
+++ b/src/App.scss
@@ -1,28 +1,35 @@
-@import "variables";
+@import 'variables';
 
 html {
-    font-size: 12px;
+  font-size: 12px;
 
-    @media screen and (min-width: $fullHD) {
-        font-size: 16px;
-    }
+  @media screen and (min-width: $fullHD) {
+    font-size: 16px;
+  }
 
-    @media screen and (min-width: $twoK) {
-        font-size: 18px;
-    }
+  @media screen and (min-width: $twoK) {
+    font-size: 18px;
+  }
 
-    @media screen and (min-width: $fourK) {
-        font-size: 35px;
-    }
+  @media screen and (min-width: $fourK) {
+    font-size: 35px;
+  }
 }
 
 body {
-    display: block;
-    width: 100vw;
-    height: 100vh;
-    overflow: hidden;
+  display: block;
+  width: 100vw;
+  height: 100vh;
+  overflow: hidden;
 }
 
 * {
-    box-sizing: border-box;
+  box-sizing: border-box;
+}
+
+.ClickNavigation {
+  position: fixed;
+  right: 0;
+  bottom: 0;
+  z-index: 1000;
 }
